# gcs

./: .gitignore  LICENSE  gcs.cabal  stack.yaml
src/Web/: GCS.hs
src/Web/GCS/: Types.hs
