name:                gcs
version:             0.1.1
synopsis:            Google Cloud Storage REST client
description:         Google Cloud Storage REST client
homepage:            https://github.com/collegevine/gcs#readme
license:             BSD3
license-file:        LICENSE
author:              Ralph Morton
maintainer:          ralph@collegevine.com
copyright:           Collegevine
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.GCS.Types, Web.GCS
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2.1
                     , time >= 1.5.0.1
                     , lens >= 4.13
                     , bytestring >= 0.10.6.0
                     , base64-bytestring >= 1.0.0.1
                     , text >= 1.2.2.1
                     , aeson >= 0.11.2.0
                     , cryptonite >=  0.15
                     , nano-http >= 0.1.2
                     , lens-aeson >= 1.0
                     , vector >= 0.11
                     , network-uri >= 2.6
                     , dlist >= 0.7
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/collegevine/gcs
